# AlgoritmoAtividade

./: CMakeLists.txt  README.md
Atividade2/: resposta.md
Atividade3/binaryTrees/: BinaryTree.h  main.cpp
Atividade3/graph/: Grafo.cpp
atividade1/: Atividade1.cpp  Cafeteria.cpp
atividade3/binaryTrees/: Binary.cpp  BinaryTree.cpp  Node.h
src/: atividade1.cpp  cafeteria.cpp  resposta.md
